[package]
name = "session_tui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["toml"] }
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
